Align help inline link styles

--- a/index.html
+++ b/index.html
@@ -1948,13 +1948,13 @@
             <li>
               Start fresh with the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#factoryResetButton"
                 data-help-target="#factoryResetButton"
               >Factory reset</a>
               safeguard in Settings—it automatically captures a
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#backupSettings"
                 data-help-target="#backupSettings"
               >Backup</a>
@@ -1969,7 +1969,7 @@
               >Show auto backups in project list</a>
               to recover them instantly and trigger manual safety copies with
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#backupSettings"
                 data-help-target="#backupSettings"
               ><strong>Backup</strong></a>
@@ -1978,7 +1978,7 @@
             <li>
               Use
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#reloadButton"
                 data-help-target="#reloadButton"
               ><em>Force reload</em></a>
@@ -1987,25 +1987,25 @@
             <li>
               Manage automatic gear rules with the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#autoGearPresetSelect"
                 data-help-target="#autoGearPresetSelect"
               ><strong>Preset</strong></a>
               menu, surface 10-minute snapshots via
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#autoGearShowBackups"
                 data-help-target="#autoGearShowBackups"
               ><strong>Show automatic backups</strong></a>
               and move rules between machines using
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#autoGearExport"
                 data-help-target="#autoGearExport"
               ><strong>Export rules</strong></a>
               and
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#autoGearImport"
                 data-help-target="#autoGearImport"
               ><strong>Import rules</strong></a>
@@ -2285,18 +2285,18 @@
               Open
               <a class="help-link button-link" href="#settingsButton" data-help-target="#settingsButton">Settings</a>
               → <em>Backup &amp; Restore</em> whenever you need a full-application snapshot.
-              <a class="help-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
+              <a class="help-link button-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
               includes saved projects, device edits, preferences, favorites, automatic gear rules and runtime feedback.
-              <a class="help-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
+              <a class="help-link button-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
               always captures a fresh safety copy before applying the selected file so nothing is lost by mistake.
             </li>
             <li>
               Before using
-              <a class="help-link" href="#reloadButton" data-help-target="#reloadButton"><strong>Force reload</strong></a>,
+              <a class="help-link button-link" href="#reloadButton" data-help-target="#reloadButton"><strong>Force reload</strong></a>,
               the
-              <a class="help-link" href="#factoryResetButton" data-help-target="#factoryResetButton"><strong>Factory reset</strong></a>
+              <a class="help-link button-link" href="#factoryResetButton" data-help-target="#factoryResetButton"><strong>Factory reset</strong></a>
               safeguard or clearing the browser cache, download a
-              <a class="help-link" href="#backupSettings" data-help-target="#backupSettings">Backup</a>
+              <a class="help-link button-link" href="#backupSettings" data-help-target="#backupSettings">Backup</a>
               so every project, device edit and auto-gear preset remains recoverable. Hourly background backups and the
               <a
                 class="help-link"
@@ -2343,7 +2343,7 @@
               <li>
                 <strong>Restore safeguards</strong> always create a brand-new safety backup before applying the file you choose,
                 giving you an immediate rollback point if you need to undo the
-                <a class="help-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
+                <a class="help-link button-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
                 process.
               </li>
               <li>
@@ -2355,7 +2355,7 @@
                   data-help-highlight="#setup-manager"
                 ><strong>Export project</strong></a>
                 and Device Database
-                <a class="help-link" href="#exportDataBtn" data-help-target="#exportDataBtn"><strong>Export</strong></a>
+                <a class="help-link button-link" href="#exportDataBtn" data-help-target="#exportDataBtn"><strong>Export</strong></a>
                 files when sharing work or moving between machines without internet access.
               </li>
             </ul>
@@ -2377,7 +2377,7 @@
               </li>
               <li>
                 Download both a full-app
-                <a class="help-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
+                <a class="help-link button-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
                 and the current project JSON (via
                 <a
                   class="help-link button-link"
@@ -2403,7 +2403,7 @@
               </li>
               <li>
                 Periodically test full-app backups by running
-                <a class="help-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>.
+                <a class="help-link button-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>.
                 The planner automatically creates a fresh safety snapshot before applying the file, letting you revert instantly
                 if anything looks unexpected.
               </li>
@@ -2475,12 +2475,12 @@
               </li>
               <li>
                 Use the
-                <a class="help-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
+                <a class="help-link button-link" href="#backupSettings" data-help-target="#backupSettings"><strong>Backup</strong></a>
                 control to download a JSON snapshot of settings, projects, custom devices, favorites, automatic gear rules and
                 runtime feedback.
-                <a class="help-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
+                <a class="help-link button-link" href="#restoreSettings" data-help-target="#restoreSettings"><strong>Restore</strong></a>
                 captures a fresh safety copy first and then loads the selected file, and the
-                <a class="help-link" href="#factoryResetButton" data-help-target="#factoryResetButton">Factory reset</a>
+                <a class="help-link button-link" href="#factoryResetButton" data-help-target="#factoryResetButton">Factory reset</a>
                 safeguard automates a pre-reset backup before clearing local data.
               </li>
             </ul>
@@ -2529,7 +2529,7 @@
               <li>
                 A full JSON export downloads automatically every hour with a name like “2024-05-12T14-00-00 full app
                 backup.json” so you always have an offline safety copy. Trigger another snapshot on demand with the manual
-                <a class="help-link" href="#backupSettings" data-help-target="#backupSettings">Backup</a>
+                <a class="help-link button-link" href="#backupSettings" data-help-target="#backupSettings">Backup</a>
                 button after major changes.
               </li>
               <li>
@@ -2664,14 +2664,14 @@
             </li>
               <li>
                 Click
-                <a class="help-link" href="#autoGearAddRule" data-help-target="#autoGearAddRule">Add rule</a>
+                <a class="help-link button-link" href="#autoGearAddRule" data-help-target="#autoGearAddRule">Add rule</a>
                 to reveal the editor, name the rule for quick reference and select one or more scenarios that must be enabled
                 for it to trigger.
               </li>
               <li>
                 Use
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#autoGearAddItemsHeading"
                   data-help-target="#autoGearAddItemsHeading"
                 ><strong>Add these items</strong></a>
@@ -2686,7 +2686,7 @@
               </li>
               <li>
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#autoGearRemoveItemsHeading"
                   data-help-target="#autoGearRemoveItemsHeading"
                 ><strong>Remove these items</strong></a>
@@ -2695,33 +2695,33 @@
               </li>
               <li>
                 Tap
-                <a class="help-link" href="#autoGearResetFactory" data-help-target="#autoGearResetFactory"><strong>Reset to
+                <a class="help-link button-link" href="#autoGearResetFactory" data-help-target="#autoGearResetFactory"><strong>Reset to
                     factory additions</strong></a>
                 whenever you want to restore the default helper rules that ship with the planner.
               </li>
               <li>
                 Save frequently used combinations as presets via the
-                <a class="help-link" href="#autoGearPresetSelect" data-help-target="#autoGearPresetSelect"><strong>Preset</strong>
+                <a class="help-link button-link" href="#autoGearPresetSelect" data-help-target="#autoGearPresetSelect"><strong>Preset</strong>
                   menu</a>,
                 then switch or delete them as your workflow evolves.
               </li>
               <li>
                 Background automatic backups capture rule changes every 10 minutes. Toggle
-                <a class="help-link" href="#autoGearShowBackups" data-help-target="#autoGearShowBackups"><strong>Show automatic
+                <a class="help-link button-link" href="#autoGearShowBackups" data-help-target="#autoGearShowBackups"><strong>Show automatic
                     backups</strong></a>
                 to reveal the timeline inside Automatic Gear Rules.
               </li>
               <li>
                 When backups are visible, pick a timestamped snapshot from the
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#autoGearBackupSelect"
                   data-help-target="#autoGearBackupSelect"
                   data-help-highlight="#autoGearBackupsSection"
                 ><strong>Choose a backup</strong></a>
                 dropdown to review its details and press
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#autoGearBackupRestore"
                   data-help-target="#autoGearBackupRestore"
                   data-help-highlight="#autoGearBackupsSection"
@@ -2730,9 +2730,9 @@
                 while offline.
               </li>
               <li>
-                <a class="help-link" href="#autoGearExport" data-help-target="#autoGearExport"><strong>Export rules</strong></a>
+                <a class="help-link button-link" href="#autoGearExport" data-help-target="#autoGearExport"><strong>Export rules</strong></a>
                 downloads a JSON copy of your automation set;
-                <a class="help-link" href="#autoGearImport" data-help-target="#autoGearImport"><strong>Import rules</strong></a>
+                <a class="help-link button-link" href="#autoGearImport" data-help-target="#autoGearImport"><strong>Import rules</strong></a>
                 loads an existing file so crews can sync configurations without relying on connectivity.
               </li>
             <li>
@@ -2770,7 +2770,7 @@
               <li>
                 Select a
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#batteryHotswapSelect"
                   data-help-target="#batteryHotswapSelect"
                   data-help-highlight="#setup-config"
@@ -2780,7 +2780,7 @@
               <li>
                 The optional
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#batteryComparisonHeading"
                   data-help-target="#batteryComparisonHeading"
                   data-help-highlight="#batteryComparison"
@@ -2836,7 +2836,7 @@
               <li>
                 Click
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#runtimeFeedbackBtn"
                   data-help-target="#runtimeFeedbackBtn"
                   data-help-highlight="#results"
@@ -2848,7 +2848,7 @@
               <li>Include temperature for more accurate weighting.</li>
               <li>
                 Use the
-                <a class="help-link" href="#fbUseLocationBtn" data-help-target="#fbUseLocationBtn"><strong>Use Current Location</strong></a>
+                <a class="help-link button-link" href="#fbUseLocationBtn" data-help-target="#fbUseLocationBtn"><strong>Use Current Location</strong></a>
                 option to capture an approximate position in the log—everything stays stored on this device for offline
                 reference.
               </li>
@@ -2882,12 +2882,12 @@
               <li>Drag empty space to pan the diagram.</li>
               <li>
                 Enable
-                <a class="help-link" href="#gridSnapToggle" data-help-target="#gridSnapToggle"><strong>Snap to Grid</strong></a>
+                <a class="help-link button-link" href="#gridSnapToggle" data-help-target="#gridSnapToggle"><strong>Snap to Grid</strong></a>
                 to align items precisely.
               </li>
               <li>
                 Click
-                <a class="help-link" href="#resetView" data-help-target="#resetView"><strong>Reset View</strong></a>
+                <a class="help-link button-link" href="#resetView" data-help-target="#resetView"><strong>Reset View</strong></a>
                 to restore the default layout and zoom.
               </li>
               <li>Export the diagram as SVG or JPG via the <em>Download</em> button.</li>
@@ -2920,7 +2920,7 @@
               </li>
               <li>
                 Changes are stored locally—use
-                <a class="help-link" href="#exportDataBtn" data-help-target="#exportDataBtn"><em>Export</em></a>
+                <a class="help-link button-link" href="#exportDataBtn" data-help-target="#exportDataBtn"><em>Export</em></a>
                 and
                 <a class="help-link" href="#importDataBtn" data-help-target="#importDataBtn"><em>Import</em></a>
                 to share databases without losing your offline copy.
@@ -3053,7 +3053,7 @@
           <ul>
             <li>
               If the interface looks stuck or outdated, click
-              <a class="help-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
+              <a class="help-link button-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
               to clear cached files without deleting saved projects or custom devices.
             </li>
             <li>
@@ -3104,7 +3104,7 @@
             <ul>
               <li>
                 Activate tooltip mode with the
-                <a class="help-link" href="#hoverHelpButton" data-help-target="#hoverHelpButton"><strong>Hover for help</strong></a>
+                <a class="help-link button-link" href="#hoverHelpButton" data-help-target="#hoverHelpButton"><strong>Hover for help</strong></a>
                 button in the help dialog.
               </li>
               <li>Move the cursor over buttons, fields, dropdowns or headers to see brief explanations.</li>
@@ -3428,7 +3428,7 @@
               connection. The
               <a class="help-link" href="#offlineIndicator" data-help-target="#offlineIndicator">Offline indicator</a>
               confirms when the app is running locally, and you can refresh assets without losing saved data through
-              <a class="help-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
+              <a class="help-link button-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
               whenever you reconnect.
             </p>
           </details>
@@ -3609,7 +3609,7 @@
             <summary>How do I clear cached files or update the app?</summary>
             <p>
               Use the
-              <a class="help-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
+              <a class="help-link button-link" href="#reloadButton" data-help-target="#reloadButton"><em>Force reload</em></a>
               button (<span class="icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF202;</span>) in the top bar to clear cached files and reload without losing saved data.
             </p>
           </details>
