Add contextual help links for backups and project requirements

--- a/index.html
+++ b/index.html
@@ -2899,13 +2899,34 @@
             <ul>
               <li>
                 The planner saves an auto backup every 10 minutes without interrupting your work. Entries are timestamped and
-                stored alongside saved projects.
+                stored alongside
+                <a
+                  class="help-link"
+                  href="#setupSelect"
+                  data-help-target="#setupSelect"
+                  data-help-highlight="#setup-manager"
+                ><em>Saved Projects</em></a>
+                so recovery points stay a click away even when you are offline.
               </li>
               <li>
                 Enable
                 <a class="help-link" href="#settingsShowAutoBackups" data-help-target="#settingsShowAutoBackups">Show auto
                   backups in project list</a>
-                in Settings → Backup &amp; Restore to temporarily reveal those snapshots in the
+                in
+                <a
+                  class="help-link button-link"
+                  href="#settingsButton"
+                  data-help-target="#settingsButton"
+                  data-help-highlight="#settingsDialog"
+                ><strong>Settings</strong></a>
+                →
+                <a
+                  class="help-link"
+                  href="#backupSettings"
+                  data-help-target="#backupSettings"
+                  data-help-highlight="#settingsDialog"
+                >Backup &amp; Restore</a>
+                to temporarily reveal those snapshots in the
                 <a
                   class="help-link"
                   href="#setupSelect"
@@ -2956,11 +2977,36 @@
         >
           <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE469;</span>Project Requirements</h3>
           <ul>
-            <li>Capture production metadata such as production company, rental house, DoP, crew roles with email contacts and prep/shoot day ranges alongside delivery notes like resolutions, sensor modes, codecs and base frame rates so every project stays traceable.</li>
-            <li>Track creative requirements with lens sets, matte box and filter choices, monitoring configurations, frame guides, aspect mask opacity, user button layouts, video distribution and tripod preferences—all of which flow into project summaries.</li>
-            <li>Multi-select lists let you specify multiple scenarios, accessories or monitoring setups.</li>
+            <li>
+              Open the
+              <a
+                class="help-link"
+                href="#generateGearListBtn"
+                data-help-target="#generateGearListBtn"
+                data-help-highlight="#setup-manager"
+              >Project Requirements dialog</a>
+              to capture production metadata such as production company, rental house, DoP, crew roles with email contacts and prep/shoot day ranges alongside delivery notes like resolutions, sensor modes, codecs and base frame rates so every project stays traceable.
+            </li>
+            <li>
+              Track creative requirements with lens sets, matte box and filter choices, monitoring configurations, frame guides, aspect mask opacity, user button layouts, video distribution and tripod preferences—all of which flow straight into the
+              <a
+                class="help-link"
+                href="#projectRequirementsOutput"
+                data-help-target="#projectRequirementsOutput"
+              >Project Requirements summary</a>
+              and printed reports.
+            </li>
+            <li>Multi-select lists let you specify multiple scenarios, accessories or monitoring setups so complex shoots are captured in one pass.</li>
             <li>Use the + buttons to add crew entries or prep/shoot ranges, and tap the − buttons to remove items as plans change.</li>
-            <li>A live summary under <strong>Required Scenarios</strong> displays icon-labelled chips for every selection so you can confirm which accessory packs will trigger; choosing <strong>Dolly</strong> unlocks <strong>Remote Head</strong> and automatically surfaces default monitor options to keep downstream lists complete.</li>
+            <li>
+              A live summary under <strong>Required Scenarios</strong> displays icon-labelled chips for every selection so you can confirm which accessory packs will trigger; those selections also appear in the
+              <a
+                class="help-link"
+                href="#projectRequirementsOutput"
+                data-help-target="#projectRequirementsOutput"
+              >Project Requirements summary</a>
+              beside the gear list.
+            </li>
               <li>
                 The information is saved with the project, included in printed overviews and ready to populate the
                 <a
