Enhance help shortcuts with inline links

--- a/index.html
+++ b/index.html
@@ -1930,8 +1930,15 @@
               </li>
             </ol>
             <p class="help-callout-note">
-              Tip: Keep backups on separate drives when travelling—restoring always makes a fresh safety copy so nothing is
-              lost if you undo a change.
+              Tip: Keep backups on separate drives when travelling—
+              <a
+                class="help-link button-link"
+                href="#restoreSettings"
+                data-help-target="#restoreSettings"
+                data-help-highlight="#settingsDialog"
+                ><strong>Restore</strong></a
+              >
+              always creates a fresh safety copy so nothing is lost when you undo a change.
             </p>
           </div>
           <div
@@ -1942,17 +1949,55 @@
           >
             <h4>Essential shortcuts</h4>
             <ul>
-              <li><kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd> — open this help dialog instantly.</li>
-              <li><kbd>Ctrl</kbd>+<kbd>/</kbd> (<kbd>⌘</kbd>+<kbd>/</kbd>) — toggle help even while typing in a field.</li>
-              <li><kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd>) — jump straight to the help search.</li>
-              <li><kbd>Ctrl</kbd>+<kbd>K</kbd> (<kbd>⌘</kbd>+<kbd>K</kbd>) — focus the global feature search and jump to any
-                planner screen.</li>
-              <li><kbd>Ctrl</kbd>+<kbd>,</kbd> (<kbd>⌘</kbd>+<kbd>,</kbd>) — open Settings to adjust themes, backups and
-                preferences.</li>
-              <li><kbd>Ctrl</kbd>+<kbd>S</kbd> (<kbd>⌘</kbd>+<kbd>S</kbd>) — save the active project without leaving the
-                planner.</li>
-              <li><kbd>D</kbd> — toggle dark mode on or off to match your lighting environment.</li>
-              <li><kbd>P</kbd> — switch the playful pink theme and store the preference for next time.</li>
+              <li>
+                <kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd> — open the
+                <a class="help-link button-link" href="#helpButton" data-help-target="#helpButton"
+                  ><strong>Help</strong></a
+                >
+                dialog instantly.
+              </li>
+              <li>
+                <kbd>Ctrl</kbd>+<kbd>/</kbd> (<kbd>⌘</kbd>+<kbd>/</kbd>) — toggle
+                <a class="help-link" href="#helpButton" data-help-target="#helpButton">help</a> even while typing in a
+                field.
+              </li>
+              <li>
+                <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd>) — jump straight to the
+                <a class="help-link" href="#helpSearch" data-help-target="#helpSearch">help search</a>.
+              </li>
+              <li>
+                <kbd>Ctrl</kbd>+<kbd>K</kbd> (<kbd>⌘</kbd>+<kbd>K</kbd>) — focus the
+                <a class="help-link" href="#featureSearch" data-help-target="#featureSearch">global feature search</a> and
+                jump to any planner screen.
+              </li>
+              <li>
+                <kbd>Ctrl</kbd>+<kbd>,</kbd> (<kbd>⌘</kbd>+<kbd>,</kbd>) — open
+                <a class="help-link button-link" href="#settingsButton" data-help-target="#settingsButton"
+                  ><strong>Settings</strong></a
+                >
+                to adjust themes, backups and preferences.
+              </li>
+              <li>
+                <kbd>Ctrl</kbd>+<kbd>S</kbd> (<kbd>⌘</kbd>+<kbd>S</kbd>) — save the active project with
+                <a
+                  class="help-link button-link"
+                  href="#saveSetupBtn"
+                  data-help-target="#saveSetupBtn"
+                  data-help-highlight="#setup-manager"
+                  ><strong>Save</strong></a
+                >
+                without leaving the planner.
+              </li>
+              <li>
+                <kbd>D</kbd> — toggle
+                <a class="help-link" href="#darkModeToggle" data-help-target="#darkModeToggle">dark mode</a> on or off to
+                match your lighting environment.
+              </li>
+              <li>
+                <kbd>P</kbd> — switch the playful
+                <a class="help-link" href="#pinkModeToggle" data-help-target="#pinkModeToggle">Pink Mode</a> theme and store
+                the preference for next time.
+              </li>
             </ul>
           </div>
         </section>
